remove dense patch